--- a/Functionary_Clone/styles.css
+++ b/Functionary_Clone/styles.css
@@ -7,6 +7,12 @@
 *{
   font-family: 'Satoshi';
 }
+/* .sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  padding-top: 102px;
+} */
 .bgimg{
   background-image: url("funcImg.svg");
   background-position: center;
@@ -94,4 +100,59 @@ footer{
   margin-left:650px;
   text-align: right;
 
+}
+@media (min-width: 976px) {
+  footer{
+    box-sizing: border-box;
+    min-width: 0;
+    flex-direction: column;
+    margin: 10px;
+    
+  }
+  
+  .a{
+    box-sizing: border-box;
+      -webkit-box-align: center;
+      margin-top: 60px;
+      display: flex;
+  }
+  .f{
+    font-size: 30px;
+    text-align: left;
+    font-weight: bolder;
+  }
+  .b{  
+    font-size: 15px;
+    box-sizing: border-box;
+    margin-left: 60px;
+    text-align: center;
+    margin-top: 15px;
+    padding: 0px;
+    border: 0px;
+    vertical-align: baseline;
+    letter-spacing: 1px;
+  }
+  .sicon{
+    font-size: 25px;
+    text-align: right;
+    letter-spacing: 20px;
+  }
+  .d{
+    font-size: 15px;
+    box-sizing: border-box;
+      -webkit-box-align: center;
+      margin-top: 50px;
+      display: flex;
+      vertical-align: baseline;
+  }
+  .e{
+   text-align: left;
+   box-sizing: border-box;
+   
+  } 
+  .g{
+    margin-left:650px;
+    text-align: right;
+  
+  }
 }
